k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drf-prometheus-app
  labels:
    app: drf-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
       app: drf-prometheus
  template:
    metadata:
       labels:
         app: drf-prometheus
    spec:
      containers:
      - name: drf-prometheus
        image: bhabuk/drf-monitor:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /api/hello/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: drf-prometheus-service
spec:
  selector:
    app: drf-prometheus
  ports:
   - protocol: TCP
     port: 8000
     targetPort: 8000
  type: NodePort
