k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: drf-monitor-ingress
spec:
    ingressClassName: nginx
    rules:
      - host: drf-monitor.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                    name: drf-prometheus-service
                    port:
                      number: 8000
